src/Main/MetaDslx.Languages.Core/Core/Syntax/InternalSyntax/CoreParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Core\Syntax\InternalSyntax\CoreParser.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MetaDslx.Languages.Core.Syntax.InternalSyntax {

using MetaDslx.CodeAnalysis.Symbols;
using MetaDslx.Languages.Core.Model;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class CoreParser : global::MetaDslx.Languages.Antlr4Roslyn.Syntax.InternalSyntax.Antlr4Parser {
    private CoreSyntaxParser SyntaxParser => (CoreSyntaxParser)this.IncrementalAntlr4Parser;
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KNamespace=1, KUsing=2, KExtern=3, KAbstract=4, KInterface=5, KClass=6, 
		KStruct=7, KEnum=8, KNew=9, KNull=10, KTrue=11, KFalse=12, KDynamic=13, 
		KObject=14, KVoid=15, KBool=16, KChar=17, KSByte=18, KByte=19, KShort=20, 
		KUShort=21, KInt=22, KUInt=23, KLong=24, KULong=25, KDecimal=26, KFloat=27, 
		KDouble=28, KString=29, KTypeof=30, KNameof=31, KSizeof=32, KDefault=33, 
		KChecked=34, KUnchecked=35, KAs=36, KIs=37, KNot=38, KThis=39, KBase=40, 
		KAsync=41, KAwait=42, KConst=43, KReadonly=44, KDiscard=45, KThrow=46, 
		KStatic=47, TSemicolon=48, TColon=49, TDot=50, TComma=51, TAssign=52, 
		TOpenParen=53, TCloseParen=54, TOpenBracket=55, TCloseBracket=56, TOpenBrace=57, 
		TCloseBrace=58, TLessThan=59, TGreaterThan=60, TQuestion=61, TQuestionDot=62, 
		TQuestionOpenBracket=63, TQuestionQuestion=64, TAmpersand=65, THat=66, 
		TBar=67, TAndAlso=68, TOrElse=69, TPlusPlus=70, TMinusMinus=71, TPlus=72, 
		TMinus=73, TTilde=74, TExclamation=75, TSlash=76, TAsterisk=77, TPercent=78, 
		TArrow=79, TLessThanOrEqual=80, TGreaterThanOrEqual=81, TEqual=82, TNotEqual=83, 
		TAsteriskAssign=84, TSlashAssign=85, TPercentAssign=86, TPlusAssign=87, 
		TMinusAssign=88, TLeftShiftAssign=89, TRightShiftAssign=90, TAmpersandAssign=91, 
		THatAssign=92, TBarAssign=93, IdentifierNormal=94, IdentifierVerbatim=95, 
		LInteger=96, LDecimal=97, LScientific=98, LDateTimeOffset=99, LDateTime=100, 
		LDate=101, LTime=102, LRegularString=103, LGuid=104, LUtf8Bom=105, LWhiteSpace=106, 
		LCrLf=107, LLineEnd=108, LSingleLineComment=109, LComment=110, LDoubleQuoteVerbatimString=111, 
		LSingleQuoteVerbatimString=112, DoubleQuoteVerbatimStringLiteralStart=113, 
		SingleQuoteVerbatimStringLiteralStart=114, LCommentStart=115;
	public const int
		RULE_main = 0, RULE_usingNamespace = 1, RULE_statement = 2, RULE_blockStatement = 3, 
		RULE_expression = 4, RULE_tupleArguments = 5, RULE_argumentList = 6, RULE_argumentExpression = 7, 
		RULE_initializerExpression = 8, RULE_fieldInitializerExpressions = 9, 
		RULE_fieldInitializerExpression = 10, RULE_collectionInitializerExpressions = 11, 
		RULE_dictionaryInitializerExpressions = 12, RULE_dictionaryInitializerExpression = 13, 
		RULE_lambdaSignature = 14, RULE_implicitLambdaSignature = 15, RULE_implicitParameterList = 16, 
		RULE_implicitParameter = 17, RULE_explicitLambdaSignature = 18, RULE_explicitParameterList = 19, 
		RULE_explicitParameter = 20, RULE_lambdaBody = 21, RULE_dotOperator = 22, 
		RULE_indexerOperator = 23, RULE_postfixOperator = 24, RULE_unaryOperator = 25, 
		RULE_multiplicativeOperator = 26, RULE_additiveOperator = 27, RULE_shiftOperator = 28, 
		RULE_leftShiftOperator = 29, RULE_rightShiftOperator = 30, RULE_relationalOperator = 31, 
		RULE_equalityOperator = 32, RULE_compoundAssignmentOperator = 33, RULE_returnType = 34, 
		RULE_typeReference = 35, RULE_namedType = 36, RULE_genericTypeArguments = 37, 
		RULE_genericTypeArgument = 38, RULE_primitiveType = 39, RULE_voidType = 40, 
		RULE_name = 41, RULE_qualifiedName = 42, RULE_qualifier = 43, RULE_identifier = 44, 
		RULE_literal = 45, RULE_nullLiteral = 46, RULE_booleanLiteral = 47, RULE_integerLiteral = 48, 
		RULE_decimalLiteral = 49, RULE_scientificLiteral = 50, RULE_stringLiteral = 51;
	public static readonly string[] ruleNames = {
		"main", "usingNamespace", "statement", "blockStatement", "expression", 
		"tupleArguments", "argumentList", "argumentExpression", "initializerExpression", 
		"fieldInitializerExpressions", "fieldInitializerExpression", "collectionInitializerExpressions", 
		"dictionaryInitializerExpressions", "dictionaryInitializerExpression", 
		"lambdaSignature", "implicitLambdaSignature", "implicitParameterList", 
		"implicitParameter", "explicitLambdaSignature", "explicitParameterList", 
		"explicitParameter", "lambdaBody", "dotOperator", "indexerOperator", "postfixOperator", 
		"unaryOperator", "multiplicativeOperator", "additiveOperator", "shiftOperator", 
		"leftShiftOperator", "rightShiftOperator", "relationalOperator", "equalityOperator", 
		"compoundAssignmentOperator", "returnType", "typeReference", "namedType", 
		"genericTypeArguments", "genericTypeArgument", "primitiveType", "voidType", 
		"name", "qualifiedName", "qualifier", "identifier", "literal", "nullLiteral", 
		"booleanLiteral", "integerLiteral", "decimalLiteral", "scientificLiteral", 
		"stringLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'using'", "'extern'", "'abstract'", "'interface'", 
		"'class'", "'struct'", "'enum'", "'new'", "'null'", "'true'", "'false'", 
		"'dynamic'", "'object'", "'void'", "'bool'", "'char'", "'sbyte'", "'byte'", 
		"'short'", "'ushort'", "'int'", "'uint'", "'long'", "'ulong'", "'decimal'", 
		"'float'", "'double'", "'string'", "'typeof'", "'nameof'", "'sizeof'", 
		"'default'", "'checked'", "'unchecked'", "'as'", "'is'", "'not'", "'this'", 
		"'base'", "'async'", "'await'", "'const'", "'readonly'", "'_'", "'throw'", 
		"'static'", "';'", "':'", "'.'", "','", "'='", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "'<'", "'>'", "'?'", "'?.'", "'?['", "'??'", "'&'", "'^'", 
		"'|'", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'/'", 
		null, "'%'", "'=>'", "'<='", "'>='", "'=='", "'!='", "'*='", "'/='", "'%='", 
		"'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "'\"'", "'''", "'@\"'", "'@''", "'/*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KNamespace", "KUsing", "KExtern", "KAbstract", "KInterface", "KClass", 
		"KStruct", "KEnum", "KNew", "KNull", "KTrue", "KFalse", "KDynamic", "KObject", 
		"KVoid", "KBool", "KChar", "KSByte", "KByte", "KShort", "KUShort", "KInt", 
		"KUInt", "KLong", "KULong", "KDecimal", "KFloat", "KDouble", "KString", 
		"KTypeof", "KNameof", "KSizeof", "KDefault", "KChecked", "KUnchecked", 
		"KAs", "KIs", "KNot", "KThis", "KBase", "KAsync", "KAwait", "KConst", 
		"KReadonly", "KDiscard", "KThrow", "KStatic", "TSemicolon", "TColon", 
		"TDot", "TComma", "TAssign", "TOpenParen", "TCloseParen", "TOpenBracket", 
		"TCloseBracket", "TOpenBrace", "TCloseBrace", "TLessThan", "TGreaterThan", 
		"TQuestion", "TQuestionDot", "TQuestionOpenBracket", "TQuestionQuestion", 
		"TAmpersand", "THat", "TBar", "TAndAlso", "TOrElse", "TPlusPlus", "TMinusMinus", 
		"TPlus", "TMinus", "TTilde", "TExclamation", "TSlash", "TAsterisk", "TPercent", 
		"TArrow", "TLessThanOrEqual", "TGreaterThanOrEqual", "TEqual", "TNotEqual", 
		"TAsteriskAssign", "TSlashAssign", "TPercentAssign", "TPlusAssign", "TMinusAssign", 
		"TLeftShiftAssign", "TRightShiftAssign", "TAmpersandAssign", "THatAssign", 
		"TBarAssign", "IdentifierNormal", "IdentifierVerbatim", "LInteger", "LDecimal", 
		"LScientific", "LDateTimeOffset", "LDateTime", "LDate", "LTime", "LRegularString", 
		"LGuid", "LUtf8Bom", "LWhiteSpace", "LCrLf", "LLineEnd", "LSingleLineComment", 
		"LComment", "LDoubleQuoteVerbatimString", "LSingleQuoteVerbatimString", 
		"DoubleQuoteVerbatimStringLiteralStart", "SingleQuoteVerbatimStringLiteralStart", 
		"LCommentStart"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CoreParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CoreParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CoreParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CoreParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MainContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(CoreParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UsingNamespaceContext[] usingNamespace() {
			return GetRuleContexts<UsingNamespaceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingNamespaceContext usingNamespace(int i) {
			return GetRuleContext<UsingNamespaceContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreParserVisitor<TResult> typedVisitor = visitor as ICoreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		return this.SyntaxParser != null && this.SyntaxParser.IsIncremental ? this.SyntaxParser._Antlr4ParseMain() : _DoParseMain();
	}

	internal MainContext _DoParseMain() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==KUsing) {
				{
				{
				State = 104;
				usingNamespace();
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KNew) | (1L << KNull) | (1L << KTrue) | (1L << KFalse) | (1L << KTypeof) | (1L << KNameof) | (1L << KSizeof) | (1L << KDefault) | (1L << KChecked) | (1L << KUnchecked) | (1L << KThis) | (1L << KBase) | (1L << KAwait) | (1L << KDiscard) | (1L << KThrow) | (1L << TOpenParen))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (THat - 66)) | (1L << (TPlusPlus - 66)) | (1L << (TMinusMinus - 66)) | (1L << (TPlus - 66)) | (1L << (TMinus - 66)) | (1L << (TTilde - 66)) | (1L << (TExclamation - 66)) | (1L << (IdentifierNormal - 66)) | (1L << (IdentifierVerbatim - 66)) | (1L << (LInteger - 66)) | (1L << (LDecimal - 66)) | (1L << (LScientific - 66)) | (1L << (LRegularString - 66)))) != 0)) {
				{
				{
				State = 110;
				statement();
				}
				}
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 116;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingNamespaceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KUsing() { return GetToken(CoreParser.KUsing, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public QualifierContext qualifier() {
			return GetRuleContext<QualifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TSemicolon() { return GetToken(CoreParser.TSemicolon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAssign() { return GetToken(CoreParser.TAssign, 0); }
		public UsingNamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingNamespace; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreParserVisitor<TResult> typedVisitor = visitor as ICoreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsingNamespaceContext usingNamespace() {
		return this.SyntaxParser != null && this.SyntaxParser.IsIncremental ? this.SyntaxParser._Antlr4ParseUsingNamespace() : _DoParseUsingNamespace();
	}

	internal UsingNamespaceContext _DoParseUsingNamespace() {
		UsingNamespaceContext _localctx = new UsingNamespaceContext(Context, State);
		EnterRule(_localctx, 2, RULE_usingNamespace);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			Match(KUsing);
			State = 122;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 119;
				name();
				State = 120;
				Match(TAssign);
				}
				break;
			}
			State = 124;
			qualifier();
			State = 125;
			Match(TSemicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TSemicolon() { return GetToken(CoreParser.TSemicolon, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreParserVisitor<TResult> typedVisitor = visitor as ICoreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		return this.SyntaxParser != null && this.SyntaxParser.IsIncremental ? this.SyntaxParser._Antlr4ParseStatement() : _DoParseStatement();
	}

	internal StatementContext _DoParseStatement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			expression(0);
			State = 128;
			Match(TSemicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TOpenBrace() { return GetToken(CoreParser.TOpenBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TCloseBrace() { return GetToken(CoreParser.TCloseBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreParserVisitor<TResult> typedVisitor = visitor as ICoreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockStatementContext blockStatement() {
		return this.SyntaxParser != null && this.SyntaxParser.IsIncremental ? this.SyntaxParser._Antlr4ParseBlockStatement() : _DoParseBlockStatement();
	}

	internal BlockStatementContext _DoParseBlockStatement() {
		BlockStatementContext _localctx = new BlockStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_blockStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130;
			Match(TOpenBrace);
			State = 134;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KNew) | (1L << KNull) | (1L << KTrue) | (1L << KFalse) | (1L << KTypeof) | (1L << KNameof) | (1L << KSizeof) | (1L << KDefault) | (1L << KChecked) | (1L << KUnchecked) | (1L << KThis) | (1L << KBase) | (1L << KAwait) | (1L << KDiscard) | (1L << KThrow) | (1L << TOpenParen))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (THat - 66)) | (1L << (TPlusPlus - 66)) | (1L << (TMinusMinus - 66)) | (1L << (TPlus - 66)) | (1L << (TMinus - 66)) | (1L << (TTilde - 66)) | (1L << (TExclamation - 66)) | (1L << (IdentifierNormal - 66)) | (1L << (IdentifierVerbatim - 66)) | (1L << (LInteger - 66)) | (1L << (LDecimal - 66)) | (1L << (LScientific - 66)) | (1L << (LRegularString - 66)))) != 0)) {
				{
				{
				State = 131;
				statement();
				}
				}
				State = 136;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 137;
			Match(TCloseBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NewExprContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KNew() { return GetToken(CoreParser.KNew, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeReferenceContext typeReference() {
			return GetRuleContext<TypeReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TOpenParen() { return GetToken(CoreParser.TOpenParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TCloseParen() { return GetToken(CoreParser.TCloseParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentListContext argumentList() {
			return GetRuleContext<ArgumentListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InitializerExpressionContext initializerExpression() {
			return GetRuleContext<InitializerExpressionContext>(0);
		}
		public NewExprContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreParserVisitor<TResult> typedVisitor = visitor as ICoreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNewExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OrElseExprContext : ExpressionContext {
		public ExpressionContext left;
		public ExpressionContext right;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TOrElse() { return GetToken(CoreParser.TOrElse, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public OrElseExprContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreParserVisitor<TResult> typedVisitor = visitor as ICoreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrElseExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ThisExprContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KThis() { return GetToken(CoreParser.KThis, 0); }
		public ThisExprContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreParserVisitor<TResult> typedVisitor = visitor as ICoreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitThisExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CompAssignExprContext : ExpressionContext {
		public ExpressionContext target;
		public ExpressionContext value;
		[System.Diagnostics.DebuggerNonUserCode] public CompoundAssignmentOperatorContext compoundAssignmentOperator() {
			return GetRuleContext<CompoundAssignmentOperatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public CompAssignExprContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreParserVisitor<TResult> typedVisitor = visitor as ICoreParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompAssignExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TypeofExprContext : ExpressionContext {
